k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ngo-website
  namespace: ngo

spec:
  replicas: 2

  selector:
    matchLabels:
      app: ngo-website

  template:
    metadata:
      labels:
        app: ngo-website

    spec:
      containers:
      - name: ngo-website

        image: ngo-website:latest

        imagePullPolicy: Never

        ports:
        - containerPort: 3000
