k8s/app-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ngo-service
  namespace: ngo

spec:
  selector:
    app: ngo-website

  ports:
  - port: 3000
    targetPort: 3000

  type: NodePort
