k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ngo-ingress
  namespace: ngo
spec:
  ingressClassName: nginx

  rules:
  - host: ngo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ngo-service
            port:
              number: 3000
